src/main/default/objects/Coveo_chatbot_session__c/Coveo_chatbot_session__c.object-meta.xml
<CustomObject>
    <description>Object to store information for Coveo on a chatbot session.</description>
    <label>Coveo Chatbot Session</label>
    <nameField>
        <label>Coveo_chatbot_session Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coveo_chatbot_sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>