src/main/default/objects/Coveo_chatbot_session__c/fields/Coveo_VisitId__c.field-meta.xml
<CustomField>
    <fullName>Coveo_VisitId__c</fullName>
    <label>Coveo_VisitId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>