src/main/default/objects/Coveo_chatbot_session__c/fields/Coveo_VisitorId__c.field-meta.xml
<CustomField>
    <fullName>Coveo_VisitorId__c</fullName>
    <label>Coveo_VisitorId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>