src/main/default/objects/Coveo_chatbot_session__c/fields/Live_Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Live_Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Live Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipName>Coveo_chatbot_sessions</relationshipName>
    <type>Lookup</type>
</CustomField>