src/main/default/objects/Coveo_chatbot_session__c/fields/LiveAgentSessionId__c.field-meta.xml
<CustomField>
    <fullName>LiveAgentSessionId__c</fullName>
    <label>LiveAgentSessionId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>